--- a/index.html
+++ b/index.html
@@ -12,7 +12,19 @@
     <title>Quiz</title>
 </head>
 <body>
-    
+    <div class="app">
+        <h1>Simple Quiz</h1>
+        <div class="quiz">
+            <h2 id="question">Question goes here</h2>
+            <div id="answer-buttons">
+                <button class="btn">Answer 1</button>
+                <button class="btn">Answer 2</button>
+                <button class="btn">Answer 3</button>
+                <button class="btn">Answer 4</button>
+            </div>
+            <button id="next-btn">Next</button>
+        </div>
+    </div>
 
     <!-- script -->
     <script src="script.js"></script>
